| Summary: | ASTERISK-27193: IPv6 receive address in message doesn't include brackets | ||
| Reporter: | Scott Griepentrog (sgriepentrog) | Labels: | pjsip |
| Date Opened: | 2017-08-10 09:17:11 | Date Closed: | 2017-08-10 11:59:06 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_messaging |
| Versions: | 13.0.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When processing an incoming SIP MESSAGE, PJSIP attaches the IP address that the message was received from to the message in the variable PJSIP_RECVADDR. When that IP address is in IPv6 format, the appending of a :PORT without also encapsulating the IPv6 address in brackets []'s results in an unparseable mess. By setting an additional bit flag on the pj_sockaddr_print call, the brackets are added and this issue is avoided. | ||
| Comments: | |||